Gemfire testing: `--add-opens` for JDK management